# dgx-zerobus-otel-demo

./: .env.example  .gitignore  ARCHITECTURE.md  README.md
collector/: collector.yaml
simulator/: dcgm_simulator.py  pyproject.toml
sql/: 01_create_tables.sql  02_fleet_analysis_queries.sql
